--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-25 18:15:08
+lastsearch = 2024-07-25 21:31:45
 
 [demxanh.com]
-match = 6.9%%
-title = Chiếu điều hòa cao su non đa sắc xanh cốm hình hoa
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html
+match = 13.8%%
+title = Chiếu điều hòa cao su non đa sắc hình 3 chú thỏ
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-hinh-3-chu-tho.html
 
 [tiki.vn]
 match = 20.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632823
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
 
 [demchinhhang.com]
 match = 51.7%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
-match = 13.8%%
-title = CHIẾU ĐIỀU HOÀ CHIẾU CAO SU NON 3D HOẠ TIẾT ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html
+match = -17.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
 
 [nanara.vn]
 match = 34.5%%
@@ -32,9 +32,9 @@ title = Set chiếu điều hòa cao su Tencel - NANARA
 url = https://nanara.vn/p/set-chieu-dieu-hoa-cao-su-tencel/
 
 [entershopping.vn]
-match = -13.8%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+match = 3.4%%
+title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [chiaki.vn]
 match = 13.8%%
@@ -59,7 +59,7 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-cao-su-non-2d-plush/
 [foreverbedding.net]
 match = -37.9%%
 title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOop-Q2qT6tTxPuIAD_sqhj_z4RPlWzfStidX6Ph9B5lL61ZI38ot
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [russo.vn]
 match = -17.2%%
