--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-25 16:39:23
+lastsearch = 2024-07-25 21:40:34
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -12,9 +12,9 @@ title = Chiếu lác
 url = https://www.diepxuan.com/chieu/chieu-lac.html?p=2
 
 [shopee.vn]
-match = -18.8%%
-title = Chiếu lác thiên nhiên : 1m6 .1m8
-url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
+match = 31.2%%
+title = Chiếu Lác Trắng Xếp Gọn
+url = https://shopee.vn/Chiếu-Lác-Trắng-Xếp-Gọn-i.58697470.8505363108
 
 [www.youtube.com]
 match = -243.8%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -175.0%%
-title = YÊU BẾP✅ (Esheep Kitchen family) | |||TUYỆT CHIÊU ...
-url = https://m.facebook.com/groups/groupyeubep/permalink/1362293600821458/
+match = -150.0%%
+title = Chiều nay bún đậu THỊ NỞ nhận ship tân toà ạ | ...
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2398390100541455/
 
 [www.sjcallahabad.org]
 match = -212.5%%
@@ -542,9 +542,9 @@ title = Đảng viên, nhân dân quê hương Đông Anh tiếc thương ...
 url = http://caobangtv.vn/tin-tuc-n75200/dang-vien-nhan-dan-que-huong-dong-anh-tiec-thuong-nho-ve-tong-bi-thu-nguyen-phu-trong.html
 
 [langsontv.vn]
-match = -193.8%%
-title = Nadal tiến vào bán kết Nordea Open sau trận đấu 4 tiếng
-url = https://langsontv.vn/news/488/72906/nadal-tien-vao-ban-ket-nordea-open-sau-tran-dau-4-tieng
+match = -181.2%%
+title = Lạc vào "thiên đường mây" trên đồi cỏ đẹp như phim ở ...
+url = https://langsontv.vn/news/460/73111/lac-vao-thien-duong-may-tren-doi-co-dep-nhu-phim-o-cao-bang
 
 [nongnghiep.vn]
 match = -168.8%%
