--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-25 18:23:40
+lastsearch = 2024-07-25 21:44:02
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -205.9%%
-title = Our HOA restricts trucks in our community. I have a pickup ...
-url = https://www.quora.com/Our-HOA-restricts-trucks-in-our-community-I-have-a-pickup-and-want-to-be-able-to-park-it-on-the-driveway-The-pickup-is-not-a-work-truck-and-it-has-a-cover-on-the-back-Can-they-say-a-pickup-is-a-truck
+match = -217.6%%
+title = If I already live in a neighborhood, and HOA tries to claim it ...
+url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
 
 [lauragoodsonart.com]
 match = 47.1%%
