--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-25 19:39:31
+lastsearch = 2024-07-25 21:37:27
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -19,7 +19,7 @@ url = https://everon.vip/nem-everon-ceramic
 [everonvn.com.vn]
 match = 20.0%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOopmOTu-0jorxCu25ZusrFYNxTTsTdGDFcRpgSO-nK5SJHb9jiGm
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [everonchinhhang.vn]
 match = -50.0%%
@@ -44,7 +44,7 @@ url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 [everon.com.vn]
 match = -80.0%%
 title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOory8IhuA6ivLDhd5Zmjnzj4Hr-D5bVATFQNbmUViRUMLm_draNS
+url = https://everon.com.vn/kich-co/120200/
 
 [demqueensweet.com]
 match = -130.0%%
@@ -54,7 +54,7 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOoq9tk1b97iDIfDNcnPV1ydZNzWPGeN2RPRormqhMvhhC3_-0-K-
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html
 
 [ru9.vn]
 match = -150.0%%
@@ -74,7 +74,7 @@ url = https://everon.online/products/dem-song-everon
 [everonxuankhieu.vn]
 match = -90.0%%
 title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ ...
-url = https://everonxuankhieu.vn/dem-bong-ep-everon/?srsltid=AfmBOorulesh8KByphN4utKdNXsiyPmkYafPtku8qMjPx7vO2_9LxUWQ
+url = https://everonxuankhieu.vn/dem-bong-ep-everon/
 
 [nemgiagoc.vn]
 match = -60.0%%
