--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-25 18:11:36
+lastsearch = 2024-07-25 21:43:40
 
 [www.diepxuan.com]
 match = 5.9%%
@@ -27,9 +27,9 @@ title = Combo 2 chiếc gối bông cotton korea 65cm x 45cm
 url = https://shopee.vn/Combo-2-chiếc-gối-bông-cotton-korea-65cm-x-45cm-01-cặp-ruột-gối-bông-cao-cấp-i.135534164.7132132800
 
 [demxanh.com]
-match = -135.3%%
-title = Ruột gối Kim Cương chính hãng giá tốt nhất thị trường
-url = https://demxanh.com/ruot-goi-kim-cuong.html
+match = -100.0%%
+title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
+url = https://demxanh.com/ruot-goi.html
 
 [everonkorea.com]
 match = -100.0%%
@@ -42,9 +42,9 @@ title = Ruột gối - Drap giường, chăn ga gối thảm Hàn Quốc
 url = https://drapgiuonghanquoc.com/danh-muc-san-pham/ruot-chan-ruot-goi/ruot-goi/
 
 [sieuthidemonline.vn]
-match = -135.3%%
-title = Ruột gối đơn siêu nhẹ Sông Hồng Collection chính hãng!
-url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
+match = -158.8%%
+title = Ruột gối 50x70 bông tinh khiết siêu nhẹ cao cấp chính hãng
+url = https://sieuthidemonline.vn/ruot-goi-50x70/
 
 [www.lazada.vn]
 match = -147.1%%
@@ -170,4 +170,9 @@ url = https://thitruongsi.com/cap-ruot-goi-muji-ke-caro-cao-cap-2201357.html
 match = -129.4%%
 title = Employment of Armor in Korea Volume I | PDF | Tanks
 url = https://www.scribd.com/document/71045865/Employment-of-Armor-in-Korea-Volume-I
+
+[nemuytin.com]
+match = -188.2%%
+title = 1 Cặp Gối Hơi Loại Tốt Bông Trắng Tinh Khiết, Kích Thước ...
+url = https://nemuytin.com/product/1-cap-goi-hoi-loai-tot-bong-trang-tinh-khiet-kich-thuoc-40x60cm/
 
