--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-25 14:31:05
+lastsearch = 2024-07-25 22:55:57
 
 [www.reddit.com]
-match = -104.3%%
-title = Riot is cutting back budget on esports? : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
+match = -82.6%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
 match = -58.3%%
@@ -262,9 +262,9 @@ title = Flow of Arms – Limitations [Transcript of Hearings], ...
 url = https://www.archives.gov/files/declassification/iscap/pdf/2011-064-doc49.pdf
 
 [cryptonews.com]
-match = -104.3%%
-title = Korean Financial Authorities Address Mass Crypto Delisting
-url = https://cryptonews.com/news/south-korean-authority-address-concerns-over-mass-delisting.htm
+match = -108.7%%
+title = South Korean Police Arrest 70 in 'Crypto-powered Drugs ...
+url = https://cryptonews.com/news/south-korean-police-arrest-70-in-raid-on-crypto-powered-drug-dealers.htm
 
 [www.koreanwar2.org]
 match = -30.4%%
