--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-25 20:31:49
+lastsearch = 2024-07-25 22:53:26
 
 [everonvn.com.vn]
 match = 0.0%%
@@ -38,8 +38,8 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [www.everonqb.com]
 match = -111.1%%
-title = Vỏ gối EPM21072 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epm21072-45x65.html
+title = Vỏ gối EPC21054 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epc21054-45x65.html
 
 [shopee.vn]
 match = -127.8%%
