--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-26 02:15:35
+lastsearch = 2024-07-26 04:13:57
 
 [tiki.vn]
 match = 16.0%%
@@ -12,9 +12,9 @@ title = Mua Chiếu trúc Đài Loan mặt trúc mặt lụa
 url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=10766238
 
 [www.tiktok.com]
-match = 0.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -80.0%%
+title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Loan ...
+url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
 
 [shopee.vn]
 match = -28.0%%
@@ -42,9 +42,9 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
-match = -40.0%%
-title = Văn Mẫu Lớp 12 (Tập 2) - Google Books Result
-url = https://books.google.com/books?id=Y-AHEQAAQBAJ&pg=PT590&lpg=PT590&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=NzfS8ZofTl&sig=ACfU3U0YA7SQeZp6Novsp5SBxQaR-RmUnA&hl=en&sa=X&ved=2ahUKEwi-xcOWi8KHAxUbFlkFHecZB9oQ6AF6BAgVEAM
+match = -80.0%%
+title = Những Bài Văn Lớp 12 Hay Thi (Tập 1) - Google Books Result
+url = https://books.google.com/books?id=zeMGEQAAQBAJ&pg=PT255&lpg=PT255&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=5HmFGxUYuH&sig=ACfU3U1XWcN6dPP-l6xKXFG_M4CN2ke3MQ&hl=en&sa=X&ved=2ahUKEwikhfD7jcOHAxV4E1kFHddWH8YQ6AF6BAgZEAM
 
 [www.skyscanner.com.vn]
 match = -52.0%%
