--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-26 03:43:12
+lastsearch = 2024-07-26 04:23:08
 
 [bilystore.vn]
-match = -95.2%%
-title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+match = -81.0%%
+title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-phong-ngu-na14/
 
 [shopee.vn]
 match = -52.4%%
@@ -42,9 +42,9 @@ title = Đệm kích cỡ nào phù hợp cho giường đơn một người
 url = https://everonhanquoc.vn/tin-tuc/6128/dem-kich-co-nao-phu-hop-cho-giuong-don-mot-nguoi
 
 [flexhouse.vn]
-match = -42.9%%
-title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
-url = https://flexhouse.vn/tham-trai-san-phong-ngu
+match = -104.8%%
+title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
+url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [everonvn.com.vn]
 match = -66.7%%
@@ -152,9 +152,9 @@ title = Tổng Hợp Các Mẫu Giường Quân Đội Bền Đẹp Nhất Hiệ
 url = https://noithattamviet.net/cam-nang/tong-hop-cac-mau-giuong-quan-doi-ben-dep-nhat-hien-nay
 
 [noithatcaco.vn]
-match = -95.2%%
-title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+match = -100.0%%
+title = 189+ Mẫu giường gỗ công nghiệp 1m4 đẹp, hiện đại, giá rẻ
+url = https://noithatcaco.vn/cam-nang-noi-that/giuong-go-cong-nghiep-1m4-830.html
 
 [dogohiephien.vn]
 match = -104.8%%
@@ -195,4 +195,9 @@ url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-14
 match = -95.2%%
 title = Giường 1.8M NOVARA L14Z-NZ Đen giá rẻ, giao ngay
 url = https://dienmaycholon.com/giuong/giuong-18m-novara-l14znz-den
+
+[govi.vn]
+match = 0.0%%
+title = Giường tầng sắt GT14D - Govi
+url = https://govi.vn/product/giuong-tang-sat-gt14d/
 
