--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-26 00:32:08
+lastsearch = 2024-07-26 04:16:40
 
 [xoptraisan.info]
 match = -64.7%%
@@ -84,7 +84,7 @@ url = https://www.ssga.com/us/en/intermediary/etfs/funds/spdr-sp-oil-gas-explora
 [www.lazada.vn]
 match = -94.1%%
 title = [HCM]thảm xốp trải sàn - thảm ghép trải sàn
-url = https://www.lazada.vn/products/hcmtham-xop-trai-san-tham-ghep-trai-san-i287804887.html
+url = https://www.lazada.vn/products/hcmtham-xop-trai-san-tham-ghep-trai-san-i287804887.html?srsltid=AfmBOopV0enx0ywImjvFfTxLSfio1d42_nikBCuksR2JcpaikOQTYSgM
 
 [tiki.vn]
 match = -88.2%%
